--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": "16.5",
+    "yarn": "1.22.x"
+  },
   "lint-staged": {
     "app/**/*.{js,jsx,json}": [
       "prettier --write",
