--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@rails/actioncable": "^7.0.5",
     "@rails/webpacker": "5.4.0",
     "axios": "^1.4.0",
     "babel-plugin-js-logger": "^1.0.17",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "classnames": "^2.3.2",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^10.12.16",
     "js-logger": "^1.6.1",
     "prop-types": "^15.8.1",
     "ramda": "^0.29.0",
